--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/boxers-config/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.fb426cc8.js"></script>
-    <link rel="stylesheet" href="/assets/index.3b711c66.css">
+    <script type="module" crossorigin src="/boxers-config/assets/index.fb426cc8.js"></script>
+    <link rel="stylesheet" href="/boxers-config/assets/index.3b711c66.css">
   </head>
   <body>
     <div id="app"></div>
